--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,5 +12,6 @@ pipelines:
           - node
         script:
           - npm i
+          - npm i -g yarn
           - npm run wiki:build:prod
           - npm run wiki:deploy
