--- a/package.json
+++ b/package.json
@@ -115,6 +115,8 @@
   },
   "dependencies": {
     "@angular/cdk": "^2.0.0-beta.10",
+    "@types/lodash": "^4.14.74",
+    "lodash": "^4.17.4",
     "opencollective": "^1.0.3"
   },
   "collective": {
