--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@angular/cdk": "^2.0.0-beta.10",
     "@types/lodash": "^4.14.74",
     "lodash": "^4.17.4",
+    "ngx-cookie": "^1.0.0",
     "opencollective": "^1.0.3"
   },
   "collective": {
