--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "wiki:start:aot": "yarn run build && yarn run cli -- serve --aot",
     "wiki:test": "yarn run cli -- test --code-coverage",
     "wiki:build:prod": "yarn build && yarn cli -- build --aot -prod --base-href \"/\" --output-path \"./wiki-dist/wiki-app\"",
-    "wiki:deploy": "cd wiki-dist/wiki-app && aws s3 cp . s3://shashki-test --recursive",
+    "wiki:deploy": "cd wiki-dist/wiki-app && aws s3 cp . s3://wiki.shashki.online --recursive",
     "ci": "yarn run build && yarn run test && nyc report --reporter=text-lcov | coveralls",
     "prettier": "prettier --parser typescript --single-quote --trailing-comma es5 --write \"./**/*.ts\"",
     "watch:tests": "chokidar 'modules/**/*.ts' --initial -c 'nyc --reporter=text --reporter=html yarn run test:unit'",
@@ -117,6 +117,7 @@
     "@angular/cdk": "^2.0.0-beta.10",
     "@types/lodash": "^4.14.74",
     "lodash": "^4.17.4",
+    "ng-block-ui": "^1.0.0-beta.15",
     "ngx-cookie": "^1.0.0",
     "opencollective": "^1.0.3"
   },
