--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "clean": "git clean -xdf && yarn && yarn run bootstrap",
     "cli": "ng",
     "coverage:html": "nyc report --reporter=html",
-    "example:start": "yarn run build && yarn run cli -- serve",
-    "example:start:aot": "yarn run build && yarn run cli -- serve --aot",
-    "example:test": "jest --watch",
-    "example:build:prod": "yarn build && yarn cli -- build --aot -prod --base-href \"/platform/example-app/\" --output-path \"./example-dist/example-app\"",
+    "wiki:start": "yarn run build && yarn run cli -- serve",
+    "wiki:start:aot": "yarn run build && yarn run cli -- serve --aot",
+    "wiki:test": "jest --watch",
+    "wiki:build:prod": "yarn build && yarn cli -- build --aot -prod --base-href \"/platform/wiki-app/\" --output-path \"./wiki-dist/wiki-app\"",
     "ci": "yarn run build && yarn run test && nyc report --reporter=text-lcov | coveralls",
     "prettier": "prettier --parser typescript --single-quote --trailing-comma es5 --write \"./**/*.ts\"",
     "watch:tests": "chokidar 'modules/**/*.ts' --initial -c 'nyc --reporter=text --reporter=html yarn run test:unit'",
@@ -27,7 +27,7 @@
     "node": ">=6.9.5",
     "npm": ">=4.0.0",
     "yarn": ">=0.27.5 <2.0.0"
-  },  
+  },
   "lint-staged": {
     "*.ts": [
       "yarn prettier",
@@ -124,6 +124,8 @@
   },
   "dependencies": {
     "@angular/cdk": "^2.0.0-beta.8",
+    "ng-block-ui": "^0.9.2",
+    "ngx-cookie": "^1.0.0",
     "opencollective": "^1.0.3"
   },
   "collective": {
@@ -135,7 +137,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jest.ts",
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "example-app/tsconfig.spec.json"
+        "tsConfigFile": "wiki-app/tsconfig.spec.json"
       },
       "__TRANSFORM_HTML__": true
     },
@@ -143,7 +145,7 @@
       "^.+\\.(ts|js|html)$": "<rootDir>/node_modules/jest-preset-angular/preprocessor.js"
     },
     "testMatch": [
-      "<rootDir>/example-app/**/*.spec.ts"
+      "<rootDir>/wiki-app/**/*.spec.ts"
     ],
     "moduleFileExtensions": [
       "ts",
