--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
   },
   "dependencies": {
     "@angular/cdk": "^2.0.0-beta.8",
-    "ng-block-ui": "^0.9.2",
+    "ng-block-ui": "^1.0.0-beta.15",
     "ngx-cookie": "^1.0.0",
     "opencollective": "^1.0.3"
   },
