--- a/package.json
+++ b/package.json
@@ -124,6 +124,8 @@
   },
   "dependencies": {
     "@angular/cdk": "^2.0.0-beta.8",
+    "@types/lodash": "^4.14.76",
+    "lodash": "^4.17.4",
     "ng-block-ui": "^1.0.0-beta.15",
     "ngx-cookie": "^1.0.0",
     "opencollective": "^1.0.3"
