--- a/wiki-app/app/config/config.json
+++ b/wiki-app/app/config/config.json
@@ -9,8 +9,6 @@
   },
   "prod": {
     "api_article_url": "https://hzvzddncfb.execute-api.eu-west-1.amazonaws.com/dev/api/v1",
-    "api_board_url": "https://8vc9rklqxh.execute-api.eu-west-1.amazonaws.com/dev/api/v1",
-    "api_key_article": "123ARTICLE_API_KEY",
-    "api_key_board": "123BOARD_API_KEY"
+    "api_board_url": "https://8vc9rklqxh.execute-api.eu-west-1.amazonaws.com/dev/api/v1"
   }
 }
