--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
   },
   "dependencies": {
     "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@types/lodash": "^4.14.76",
     "lodash": "^4.17.4",
     "ng-block-ui": "^1.0.0-beta.15",
